--- a/TestesLottie/TestesLottie.iOS/TestesLottie.iOS.csproj
+++ b/TestesLottie/TestesLottie.iOS/TestesLottie.iOS.csproj
@@ -65,6 +65,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <BundleResource Include="Resources\checkbox1.json" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
